--- a/backend/package.json
+++ b/backend/package.json
@@ -12,17 +12,18 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "^6.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
-    "otp-generator": "^4.0.1",
-    "prisma": "^6.9.0"
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.15.30",
+    "@prisma/client": "^6.9.0",
+    "@types/cors": "^2.8.19",
+    "@types/node": "^22.15.31",
+    "prisma": "^6.9.0",
     "tsx": "^4.19.4"
   }
 }
